--- a/package.json
+++ b/package.json
@@ -13,37 +13,32 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@udecode/cn": "^40.2.8",
-    "@udecode/plate-basic-elements": "^41.0.0",
-    "@udecode/plate-basic-marks": "^41.0.0",
-    "@udecode/plate-common": "^41.0.2",
+    "@udecode/cn": "^42.0.0",
+    "@udecode/plate": "^42.0.1",
+    "@udecode/plate-basic-elements": "^42.0.0",
+    "@udecode/plate-basic-marks": "^42.0.0",
     "class-variance-authority": "0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "0.469.0",
-    "next": "^15.1.2",
+    "next": "^15.1.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "slate": "^0.112.0",
-    "slate-dom": "^0.111.0",
-    "slate-history": "^0.110.3",
-    "slate-hyperscript": "^0.100.0",
-    "slate-react": "^0.112.0",
-    "tailwind-merge": "2.5.5",
+    "tailwind-merge": "2.6.0",
     "tailwind-scrollbar-hide": "^2.0.0",
     "tailwindcss-animate": "1.0.7"
   },
   "devDependencies": {
-    "@types/node": "^22.10.2",
+    "@types/node": "^22.10.5",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
-    "@typescript-eslint/parser": "^8.18.1",
+    "@typescript-eslint/parser": "^8.19.1",
     "autoprefixer": "^10.4.20",
     "encoding": "^0.1.13",
     "eslint": "^8.56.0",
-    "eslint-config-next": "15.1.2",
+    "eslint-config-next": "15.1.4",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-perfectionist": "3.9.1",
-    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react": "^7.37.3",
     "eslint-plugin-tailwindcss": "^3.17.5",
     "eslint-plugin-unused-imports": "^4.1.3",
     "postcss": "^8.4.49",
@@ -51,7 +46,7 @@
     "prettier-plugin-packagejson": "^2.5.6",
     "tailwindcss": "^3.4.17",
     "tsx": "^4.19.1",
-    "typescript": "5.7.2"
+    "typescript": "5.7.3"
   },
   "packageManager": "pnpm@9.2.0",
   "pnpm": {
