--- a/package.json
+++ b/package.json
@@ -2,18 +2,20 @@
   "name": "plate-template",
   "version": "0.1.0",
   "private": true,
+  "packageManager": "bun@1.3.3",
   "scripts": {
     "build": "next build",
-    "depset": "pnpm dlx depset@latest @udecode --yes",
+    "depset": "bunx depset@latest @platejs --yes && bunx depset@latest platejs --yes",
     "dev": "next dev",
-    "lint": "biome check .",
+    "lint": "biome check . && eslint",
     "lint:fix": "biome check . --fix",
     "preview": "next build && next start",
+    "postinstall": "bunx @udecode/ruler@latest apply",
     "start": "next start",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@platejs/basic-nodes": "^52.0.0",
+    "@platejs/basic-nodes": "^52.0.1",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-toolbar": "^1.1.11",
@@ -22,7 +24,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "0.554.0",
     "next": "16.0.3",
-    "platejs": "^52.0.0",
+    "platejs": "^52.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "tailwind-merge": "3.4.0",
@@ -32,30 +34,16 @@
     "@biomejs/biome": "2.3.7",
     "@tailwindcss/postcss": "4.1.17",
     "@types/node": "^24.10.1",
-    "@types/react": "19.2.6",
+    "@types/react": "19.2.7",
     "@types/react-dom": "19.2.3",
     "@typescript-eslint/parser": "^8.47.0",
     "babel-plugin-react-compiler": "^1.0.0",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "7.0.1",
+    "lefthook": "^2.0.4",
     "postcss": "^8.5.6",
     "tailwindcss": "4.1.17",
     "typescript": "5.9.3",
     "ultracite": "6.3.6"
-  },
-  "pnpm": {
-    "peerDependencyRules": {
-      "allowAny": [
-        "react",
-        "react-dom"
-      ],
-      "ignoreMissing": [
-        "scheduler"
-      ]
-    },
-    "overrides": {
-      "@types/react": "19.2.6",
-      "@types/react-dom": "19.2.3"
-    }
   }
 }
