--- a/biome.jsonc
+++ b/biome.jsonc
@@ -7,7 +7,7 @@
     }
   },
   "files": {
-    "includes": ["**", "!!node_modules", "!!.next", "!next-env.d.ts"]
+    "includes": ["**", "!!node_modules", "!!build", "!!.next", "!next-env.d.ts"]
   },
   "linter": {
     "rules": {
@@ -21,8 +21,8 @@
             "ignoreRestSiblings": true
           }
         },
-        "useImageSize": "off" // className
-        // "noNestedComponentDefinitions": "off" // shadcn
+        "useImageSize": "off", // className
+        "noNestedComponentDefinitions": "off" // shadcn
       },
       "suspicious": {
         "noConsole": {
@@ -30,40 +30,44 @@
           "options": {
             "allow": ["assert", "error", "info", "warn"]
           }
-        }
-        // "noExplicitAny": "off" // ts chill
-        // "noArrayIndexKey": "off", // chill
-        // "noUnknownAtRules": "off", // allow for Tailwind @ rules
-        // "noEmptyBlockStatements": "off", // chill
-        // "useAwait": "off", // chill
-        // "noDocumentCookie": "off", // shadcn,
-        // "noBitwiseOperators": "off", // chill
-        // "noConfusingVoidType": "off" // false +
+        },
+        "noAlert": "off", // example
+        "noExplicitAny": "off", // ts chill
+        "noArrayIndexKey": "off", // chill
+        "noUnknownAtRules": "off", // allow for Tailwind @ rules
+        "noEmptyBlockStatements": "off", // chill
+        "useAwait": "off", // chill
+        "noDocumentCookie": "off", // shadcn
+        "noBitwiseOperators": "off", // chill
+        "noConfusingVoidType": "off" // false +
       },
       "style": {
-        // "noMagicNumbers": "off", // chill
-        // "useFilenamingConvention": "off", // chill
-        // "noNestedTernary": "off", // chill
-        "noNonNullAssertion": "off" // ts chill
-        // "useDefaultSwitchClause": "off", // chill
-        // "useBlockStatements": "off" // chill,
+        "noNestedTernary": "off", // chill
+        "noNonNullAssertion": "off", // ts chill
+        "useDefaultSwitchClause": "off", // chill
+        "useBlockStatements": "off" // chill
       },
       "nursery": {
         "noShadow": "off", // chill
         "noIncrementDecrement": "off" // chill
       },
       "complexity": {
-        // "useSimplifiedLogicExpression": "off", // false +
-        // "noExcessiveCognitiveComplexity": "off", // chill
-        "noForEach": "off" // chill
-        // "noVoid": "off", // chill
-        // "noBannedTypes": "off" // chill
+        "useSimplifiedLogicExpression": "off", // false +
+        "noExcessiveCognitiveComplexity": "off", // chill
+        "noForEach": "off", // chill
+        "noVoid": "off", // chill,
+        "noBannedTypes": "off" // chill
       },
       "a11y": {
-        // "noNoninteractiveElementInteractions": "off", // region role not supported
+        "noNoninteractiveElementInteractions": "off", // region role not supported
         "useKeyWithClickEvents": "off", // shadcn
         "useSemanticElements": "off", // shadcn
-        "useFocusableInteractive": "off" // shadcn
+        "useFocusableInteractive": "off", // shadcn
+        "noSvgWithoutTitle": "off",
+        "noStaticElementInteractions": "off",
+        "useMediaCaption": "off",
+        "useKeyWithMouseEvents": "off",
+        "useAriaPropsSupportedByRole": "off"
       },
       "security": {
         "noDangerouslySetInnerHtml": "off" // shadcn
